--- a/Constancias/RegistrarProfesor.xaml
+++ b/Constancias/RegistrarProfesor.xaml
@@ -10,7 +10,7 @@
                 <ColumnDefinition Width="100*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Content="Cancelar" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,20,0,10"/>
+            <Button Content="Cancelar" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,20,0,10" Click="Salir"/>
 
             <StackPanel Margin="50,100,50,0">
                 <TextBlock Text="Nombre:" Margin="0,10,0,0"/>
@@ -300,7 +300,7 @@
                         <!-- Botón para confirmar -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
                             <Button Content="Aceptar" Width="75" Margin="5" Click="AgregarAsignatura" />
-                            <Button Content="Cancelar" Width="75" Margin="5"  />
+                            <Button Content="Cancelar" Width="75" Margin="5"  Click="Cancelar"/>
                         </StackPanel>
                     </StackPanel>
                 </Border>
