--- a/Constancias/InicioAcademico.xaml
+++ b/Constancias/InicioAcademico.xaml
@@ -1,13 +1,11 @@
-﻿<Window x:Class="Constancias.InicioAdministrativo"
+﻿<Window x:Class="Constancias.InicioAcademico"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Constancias"
         mc:Ignorable="d"
-        Background="#555859"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="InicioAdministrativo" Height="1080" Width="1920"  WindowStartupLocation="CenterScreen" WindowState="Maximized">
+                Title="InicioAcademico" Height="1080" Width="1920"  WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
 
         <Grid Background="#2a2e2f" Width="1600" HorizontalAlignment="Right">
@@ -15,38 +13,17 @@
                 <RowDefinition Height="364*"/>
                 <RowDefinition Height="701*"/>
             </Grid.RowDefinitions>
-            <Label x:Name="lbMensajeBienvenida" Content="Bienvenido al sistema de gestion&#xD;&#xA;          de constancias UV" Foreground="White" Margin="249,62,249,426" FontWeight="Bold" FontSize="70" HorizontalContentAlignment="Center" Visibility="Hidden" Grid.Row="1"/>
-            <Button x:Name="btn_irGenerarConstancia"  Height="600" Width="400" Margin="234,232,966,232" BorderBrush="LightGray" BorderThickness="4,4,4,4" Click="irGenerarConstancia" Grid.RowSpan="2" Visibility="Visible">
+            <Label x:Name="lbMensajeBienvenida" Content="Bienvenido al sistema de gestion&#xD;&#xA;          de constancias UV" Foreground="White" Margin="249,62,249,426" FontWeight="Bold" FontSize="70" HorizontalContentAlignment="Center" Visibility="Visible" Grid.Row="1"/>
+            <Button x:Name="btn_irSolicitarConstancia"  Height="600" Width="400" Margin="600,232,600,232" BorderBrush="LightGray" BorderThickness="4,4,4,4" Click="irSolicitarConstancia" Grid.RowSpan="2" Visibility="Hidden">
                 <StackPanel>
-                    <Image Source="Recursos\generar-constancia.png" Width="320" Height="306"/>
-                    <Label Content="Generar  constancia"  FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"></Label>
-                </StackPanel>
-            </Button>
-            <Button x:Name="btn_irRegistrarProfesor"  Height="600" Width="400" Margin="600,232,600,232" BorderBrush="LightGray" BorderThickness="4,4,4,4" Click="irRegistrarProfesor" Grid.RowSpan="2" Visibility="hidden">
-                <StackPanel>
-                    <Image Source="Recursos\profesor.png" Width="306" Height="306" RenderTransformOrigin="0.5,0.5">
-                        <Image.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform ScaleX="-1"/>
-                                <SkewTransform/>
-                                <RotateTransform/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </Image.RenderTransform>
-                    </Image>
-                    <Label Content="Registrar profesor"  FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-            <Button x:Name="btn_irRegistrarFirma"  Height="600" Width="400" Margin="965,232,235,232" BorderBrush="LightGray" BorderThickness="4,4,4,4" Click="irRegistrarFirma" Grid.RowSpan="2" Visibility="Visible">
-                <StackPanel>
-                    <Image Source="/Recursos/registrar-firma-electronica.png" Width="320" Height="306"/>
-                    <Label Content="Registrar firma electronica"  FontSize="28" FontWeight="Bold" HorizontalAlignment="Center"/>
+                    <Image Source="Recursos\solicitar-constancia.png" Width="320" Height="306"/>
+                    <Label Content="Solicitar constancia"  FontSize="30" FontWeight="Bold" HorizontalAlignment="Center"></Label>
                 </StackPanel>
             </Button>
         </Grid>
         <Grid Background="#2a2e2f" Width="320" HorizontalAlignment="Left">
             <StackPanel>
-                <Grid Background="#FF2FAB9D">
+                <Grid Background="#FF2FAB9D" >
                     <StackPanel>
                         <Image Source="Recursos\logoUV.png" Height="128" Width="215"/>
                         <Label Content="SGC" FontSize="30" FontWeight="Bold" Height="62" Width="127" HorizontalContentAlignment="Center"/>
@@ -99,6 +76,6 @@
 
             </StackPanel>
         </Grid>
-
+        
     </Grid>
 </Window>
